Fixed modals overflowing the screen height

--- a/resources/assets/sass/components/_modals.scss
+++ b/resources/assets/sass/components/_modals.scss
@@ -6,8 +6,11 @@
 	top: 1em;
 	left: 0;
 	right: 0;
+	bottom: 1em;
 	margin: 0 auto;
 	width: 95%;
+	max-height: 100%;
+	overflow-y: scroll;
 	background-color: #fff;
 	box-shadow: 0 1em 2em rgba(0,0,155,0.1);
 	padding: 1em;
